syntax = "proto3";

package cre.sdk.v2.secrets;

option go_package = "github.com/smartcontractkit/chainlink-common/pkg/capabilities/v2/secrets";

message GetSecretRequest {
  string id = 1;
  string namespace = 2;
  string owner = 3;
  repeated string encryption_keys = 4;
}

message EncryptedDecryptionShare {
  repeated string shares = 2;
}

message GetSecretResponse {
  string id = 1;
  string value = 2;
  string owner = 3;
  string namespace = 4;
  repeated EncryptedDecryptionShare encrypted_decryption_key_shares = 5;
}
